GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.9.19:
	* Oscar can sign in to ICQ now
	* Graphical Smiley Faces
	* Applet got a bit of a makeover (inside & out)
	* Applet sounds not necessarily through GNOME
	* Compile-time options affect Preferences dialog
	* Whispering works (does anyone even use this?)
	* HTML-tag buttons in chat

version 0.9.18 (06/02/2000):
	* Logging in works better for oscar
	* Double error bug when sending message to an offline user is
	  fixed.
	* Pressing enter once again sends a message in buddy chatrooms (oops)
	* More fixes for the change on the AOL sign-on process. 
	* Fixed bug where GAIM sometimes doesn't find a font to use.
	* Per-conversation font and color dialogs (thanks fflewddur)
	* Chat in oscar works (somewhat)
	* Even more fixes for the sign-on process, and now you don't flash when
	  setting permit/deny lists.

version 0.9.17 (05/31/2000):
	* Automagic feature to check for new versions has been removed
	* Infinite loop bug fixed

version 0.9.16: (05/31/2000)
	* Paned buddy chat window (Thanks Syd)
	* Buddy lists (and changes) are cached to ~/.gaim/<sn>.blist
	  where <sn> is your screen name. If for some reason, you log
          into the AOL server and the buddy list comes back empty, we
	  check for a cache file, and, if we find one, read it in. This
          essentially implements recovery from a server crash at AOL
	  (AOL does not back up machines that contain TOC-based buddy
	  lists, unfortunately).  (Thanks Syd)
	* Font selection dialog 
	* Small changes to the Oscar/libfaim stuff (see libfaim/README.gaim)
	* SOCKS v4 Proxy support
	* Better proxy support overall (you can get people's info now! :) )
	* Two-way file transfer (you can get and send files, but you still
	  can't initiate either)
	* Fixed font problem with Misconfigured X-Servers.  Thanks Decklin!
	* Fixed the No Configuration problem that came about today (5/31)

version 0.9.15: (05/06/2000)