@@ -1,6 +1,5 @@
 --- STUFF FOR 0.9.19 RELEASE ---
         Gaim 95? 
 	KDE Awareness?
-	Locale Support
 	Make Buddy Chat Prettier
 	Icons for buddy list (I forget what this was)
